<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inbox_horizontal_margin"
        android:layout_marginRight="@dimen/inbox_horizontal_margin"
        android:layout_marginTop="@dimen/inbox_vertical_margin"
        android:background="@android:color/darker_gray">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:weightSum="99"
            android:id="@+id/mainLinearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:paddingLeft="6dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/participantCode"
                    android:text="@string/participant_dummy_code"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/sign_in_text_color"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clock_dummy_text"
                    android:id="@+id/clock"
                    android:textSize="18sp"
                    android:textColor="@color/material_blue_grey_800"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="33">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconStatusView"
                    android:src="@mipmap/ic_action_edit"

                    android:contentDescription="@string/icon_item_image_representation"
                    android:layout_gravity="right"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:paddingRight="6dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLinearLayout"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonsLinearLayout"
            android:weightSum="100">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Start"
                android:id="@+id/startPauseButton"
                android:layout_weight="50"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unvalid?"
                android:id="@+id/unvalidButton"
                android:layout_weight="50"/>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>